test/program.mj
program MJProgram
    // ime ne postoji u tabeli simbola
    // inat x;
    // ime ne postoji u tabeli simbola, ali ime nije tip
	// MJProgram x;
	// const int x = 'a';
	// const int y = true;
	// const int z = 3;
	// const int xx = 'a', yy = 'b', zz = 3;
	// const char a = false, b = 2, c = 'c';
	const char ch = 'c';
	char x, y[];
	const bool m = false;
	const int g = 11;

{
	void main() int a, b[]; int x[], y; char eol; {
        // a = b; // error
        // a = 3 + b; // error
        // a = 3 + b*2; // error
        // a = 3 + b[2]*2; // ok
        // g = 3; // error
        // a = 3; // ok
        // x = new int[4]; // ok
        // x[2] = a; // ok
        // x = a; // ok
        // x[3]  = x[4]; // ok
        // x = null; // ok

        // x++; // error
        // x[2]--; // ok
        // g--; // error
        // a++; // ok
        // eol++; // error

        // read(a); // ok
        // read(eol); // ok
        // read(x); // error
        // read(x[2]); // ok

        // print(1); // ok
        // print(a); // ok
        // print(eol); // ok
        // print(false); // ok

        // print(1, 4); // ok
        // print(a, 4); // ok
        // print(eol, 4); // ok
        // print(false, 4); // ok

        // print(x); // error
        // print(x[2]); // ok

        // print(x, 4); // error
        // print(x[2], 4); // ok
	}

    bool m1(int param1, int param2) int m, b[]; int x[], y; {

        // m2(); // error
        return true;
    }

    char m2() int m, b[]; int x[], y; bool z; {
        // m1(); // ok
        // m = m1(); // error
        // z = m1(); // ok

        // break; // error
        // continue; // error
        do{
            // continue; // ok
            // break; // error
            // continue; // error (loopCounter == 0)
            do{
                // break; // ok
            }while(true);
        }while(true);
        // break; // error
        // continue; // error

        // if (true && m < 2)m++; // ok
        // if (true && m == 2 || z && m < 2)m++; // ok

        return 'a';
    }

}